swagger endpoint retirar
